@@ -43,7 +43,9 @@ enum
 
     // if this flag is set, the joint can not have just one body attached to it,
     // it must have either zero or two bodies attached.
-    dJOINT_TWOBODIES = 4
+    dJOINT_TWOBODIES = 4,
+
+    dJOINT_DISABLED = 8
 };
 
 
@@ -109,7 +111,7 @@ struct dxJoint : public dObject
     };
 
 
-    int flags;                  // dJOINT_xxx flags
+    unsigned flags;             // dJOINT_xxx flags
     dxJointNode node[2];        // connections to bodies. node[1].body can be 0
     dJointFeedback *feedback;   // optional feedback structure
     dReal lambda[6];            // lambda generated by last step
@@ -124,11 +126,11 @@ struct dxJoint : public dObject
     virtual size_t size() const = 0;
 
     /// Set values which are relative with respect to bodies.
-    /// Each dxJoint should redefined it if need be.
+    /// Each dxJoint should redefine it if needed.
     virtual void setRelativeValues() {};
 
-	//Test for connecting two kinematic bodies. In that case, we should consider
-	// the joint as disabled and not use it in simulation step.
+	// Test if this joint should be used in the simulation step
+	// (has the enabled flag set, and is attached to at least one dynamic body)
 	bool isEnabled() const;
 };
 
